--- a/amsn2/ui/front_ends/qt4/chatWindow.ui
+++ b/amsn2/ui/front_ends/qt4/chatWindow.ui
@@ -67,7 +67,7 @@
          <widget class="QWidget" name="layoutWidget">
           <layout class="QVBoxLayout" name="verticalLayout">
            <item>
-            <widget class="QLabel" name="label">
+            <widget class="QLabel" name="remoteDP">
              <property name="maximumSize">
               <size>
                <width>96</width>
@@ -222,7 +222,7 @@
               </spacer>
              </item>
              <item>
-              <widget class="QLabel" name="label_2">
+              <widget class="QLabel" name="localDP">
                <property name="maximumSize">
                 <size>
                  <width>96</width>
